# currency_check

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml  requirements.txt
currency_check/: __init__.py  currency.py  tests.py  views.py
currency_check/models/: __init__.py  factory_models.py  models.py
currency_check/scripts/: update_currency.py
currency_check/templates/: home.html
instance/: currency_check.db
